// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`border: 1px dashed red: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-bottom-style": {
      "setterCode": "setStyleBorderBottomStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dashed"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dashed")",
    },
    "border-bottom-width": {
      "setterCode": "setStyleBorderBottomWidth(1, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(1, UniCSSUnitType.PX)",
    },
    "border-left-style": {
      "setterCode": "setStyleBorderLeftStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dashed"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dashed")",
    },
    "border-left-width": {
      "setterCode": "setStyleBorderLeftWidth(1, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(1, UniCSSUnitType.PX)",
    },
    "border-right-style": {
      "setterCode": "setStyleBorderRightStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dashed"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dashed")",
    },
    "border-right-width": {
      "setterCode": "setStyleBorderRightWidth(1, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(1, UniCSSUnitType.PX)",
    },
    "border-top-style": {
      "setterCode": "setStyleBorderTopStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dashed"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dashed")",
    },
    "border-top-width": {
      "setterCode": "setStyleBorderTopWidth(1, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(1, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`border: 1px dashed red: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-color": {
      "setterCode": "borderColor(UniNativeBorderColors(0xffff0000, 0xffff0000, 0xffff0000, 0xffff0000))",
      "valueCode": "UniNativeBorderColors(0xffff0000, 0xffff0000, 0xffff0000, 0xffff0000)",
    },
    "border-style": {
      "setterCode": "borderStyle(UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dashed"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dashed"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dashed"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dashed")))",
      "valueCode": "UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dashed"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dashed"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dashed"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dashed"))",
    },
  },
}
`;

exports[`border: 1px dotted red: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-bottom-style": {
      "setterCode": "setStyleBorderBottomStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dotted"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dotted")",
    },
    "border-bottom-width": {
      "setterCode": "setStyleBorderBottomWidth(1, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(1, UniCSSUnitType.PX)",
    },
    "border-left-style": {
      "setterCode": "setStyleBorderLeftStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dotted"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dotted")",
    },
    "border-left-width": {
      "setterCode": "setStyleBorderLeftWidth(1, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(1, UniCSSUnitType.PX)",
    },
    "border-right-style": {
      "setterCode": "setStyleBorderRightStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dotted"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dotted")",
    },
    "border-right-width": {
      "setterCode": "setStyleBorderRightWidth(1, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(1, UniCSSUnitType.PX)",
    },
    "border-top-style": {
      "setterCode": "setStyleBorderTopStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dotted"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dotted")",
    },
    "border-top-width": {
      "setterCode": "setStyleBorderTopWidth(1, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(1, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`border: 1px dotted red: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-color": {
      "setterCode": "borderColor(UniNativeBorderColors(0xffff0000, 0xffff0000, 0xffff0000, 0xffff0000))",
      "valueCode": "UniNativeBorderColors(0xffff0000, 0xffff0000, 0xffff0000, 0xffff0000)",
    },
    "border-style": {
      "setterCode": "borderStyle(UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dotted"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dotted"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dotted"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dotted")))",
      "valueCode": "UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dotted"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dotted"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dotted"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dotted"))",
    },
  },
}
`;

exports[`border: 1px invalid red: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "border",
        "important": false,
        "prop": "border",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "1px invalid red",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`1px invalid red\` is not valid for \`border\`
ERROR: property value \`1px invalid red\` is not supported for \`border\` (supported values are: \`number\`|\`pixel\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`border: 1px invalid red: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "border",
        "important": false,
        "prop": "border",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "1px invalid red",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`1px invalid red\` is not valid for \`border\`
ERROR: property value \`1px invalid red\` is not supported for \`border\` (supported values are: \`number\`|\`pixel\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`border: 1px none red: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-bottom-style": {
      "setterCode": "setStyleBorderBottomStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "None"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "None")",
    },
    "border-bottom-width": {
      "setterCode": "setStyleBorderBottomWidth(1, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(1, UniCSSUnitType.PX)",
    },
    "border-left-style": {
      "setterCode": "setStyleBorderLeftStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "None"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "None")",
    },
    "border-left-width": {
      "setterCode": "setStyleBorderLeftWidth(1, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(1, UniCSSUnitType.PX)",
    },
    "border-right-style": {
      "setterCode": "setStyleBorderRightStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "None"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "None")",
    },
    "border-right-width": {
      "setterCode": "setStyleBorderRightWidth(1, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(1, UniCSSUnitType.PX)",
    },
    "border-top-style": {
      "setterCode": "setStyleBorderTopStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "None"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "None")",
    },
    "border-top-width": {
      "setterCode": "setStyleBorderTopWidth(1, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(1, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`border: 1px none red: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-color": {
      "setterCode": "borderColor(UniNativeBorderColors(0xffff0000, 0xffff0000, 0xffff0000, 0xffff0000))",
      "valueCode": "UniNativeBorderColors(0xffff0000, 0xffff0000, 0xffff0000, 0xffff0000)",
    },
    "border-style": {
      "setterCode": "borderStyle(UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None")))",
      "valueCode": "UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"))",
    },
  },
}
`;

exports[`border: 1px solid red: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-bottom-style": {
      "setterCode": "setStyleBorderBottomStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Solid"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Solid")",
    },
    "border-bottom-width": {
      "setterCode": "setStyleBorderBottomWidth(1, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(1, UniCSSUnitType.PX)",
    },
    "border-left-style": {
      "setterCode": "setStyleBorderLeftStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Solid"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Solid")",
    },
    "border-left-width": {
      "setterCode": "setStyleBorderLeftWidth(1, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(1, UniCSSUnitType.PX)",
    },
    "border-right-style": {
      "setterCode": "setStyleBorderRightStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Solid"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Solid")",
    },
    "border-right-width": {
      "setterCode": "setStyleBorderRightWidth(1, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(1, UniCSSUnitType.PX)",
    },
    "border-top-style": {
      "setterCode": "setStyleBorderTopStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Solid"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Solid")",
    },
    "border-top-width": {
      "setterCode": "setStyleBorderTopWidth(1, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(1, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`border: 1px solid red: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-color": {
      "setterCode": "borderColor(UniNativeBorderColors(0xffff0000, 0xffff0000, 0xffff0000, 0xffff0000))",
      "valueCode": "UniNativeBorderColors(0xffff0000, 0xffff0000, 0xffff0000, 0xffff0000)",
    },
    "border-style": {
      "setterCode": "borderStyle(UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Solid"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Solid"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Solid"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Solid")))",
      "valueCode": "UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Solid"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Solid"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Solid"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Solid"))",
    },
  },
}
`;

exports[`border-*-color: border-bottom-color-#00ff00: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-*-color: border-bottom-color-#00ff00: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-color": {
      "setterCode": "borderColor(UniNativeBorderColors(0x00000000, 0x00000000, 0xff00ff00, 0x00000000))",
      "valueCode": "UniNativeBorderColors(0x00000000, 0x00000000, 0xff00ff00, 0x00000000)",
    },
  },
}
`;

exports[`border-*-color: border-bottom-color-red: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-*-color: border-bottom-color-red: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-color": {
      "setterCode": "borderColor(UniNativeBorderColors(0x00000000, 0x00000000, 0xffff0000, 0x00000000))",
      "valueCode": "UniNativeBorderColors(0x00000000, 0x00000000, 0xffff0000, 0x00000000)",
    },
  },
}
`;

exports[`border-*-color: border-left-color-#00ff00: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-*-color: border-left-color-#00ff00: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-color": {
      "setterCode": "borderColor(UniNativeBorderColors(0x00000000, 0x00000000, 0x00000000, 0xff00ff00))",
      "valueCode": "UniNativeBorderColors(0x00000000, 0x00000000, 0x00000000, 0xff00ff00)",
    },
  },
}
`;

exports[`border-*-color: border-left-color-red: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-*-color: border-left-color-red: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-color": {
      "setterCode": "borderColor(UniNativeBorderColors(0x00000000, 0x00000000, 0x00000000, 0xffff0000))",
      "valueCode": "UniNativeBorderColors(0x00000000, 0x00000000, 0x00000000, 0xffff0000)",
    },
  },
}
`;

exports[`border-*-color: border-right-color-#00ff00: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-*-color: border-right-color-#00ff00: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-color": {
      "setterCode": "borderColor(UniNativeBorderColors(0x00000000, 0xff00ff00, 0x00000000, 0x00000000))",
      "valueCode": "UniNativeBorderColors(0x00000000, 0xff00ff00, 0x00000000, 0x00000000)",
    },
  },
}
`;

exports[`border-*-color: border-right-color-red: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-*-color: border-right-color-red: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-color": {
      "setterCode": "borderColor(UniNativeBorderColors(0x00000000, 0xffff0000, 0x00000000, 0x00000000))",
      "valueCode": "UniNativeBorderColors(0x00000000, 0xffff0000, 0x00000000, 0x00000000)",
    },
  },
}
`;

exports[`border-*-color: border-top-color-#00ff00: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-*-color: border-top-color-#00ff00: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-color": {
      "setterCode": "borderColor(UniNativeBorderColors(0xff00ff00, 0x00000000, 0x00000000, 0x00000000))",
      "valueCode": "UniNativeBorderColors(0xff00ff00, 0x00000000, 0x00000000, 0x00000000)",
    },
  },
}
`;

exports[`border-*-color: border-top-color-red: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-*-color: border-top-color-red: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-color": {
      "setterCode": "borderColor(UniNativeBorderColors(0xffff0000, 0x00000000, 0x00000000, 0x00000000))",
      "valueCode": "UniNativeBorderColors(0xffff0000, 0x00000000, 0x00000000, 0x00000000)",
    },
  },
}
`;

exports[`border-*-style: border-bottom-style-dashed: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-bottom-style": {
      "setterCode": "setStyleBorderBottomStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dashed"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dashed")",
    },
  },
}
`;

exports[`border-*-style: border-bottom-style-dashed: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-style": {
      "setterCode": "borderStyle(UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dashed"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None")))",
      "valueCode": "UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dashed"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"))",
    },
  },
}
`;

exports[`border-*-style: border-bottom-style-dotted: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-bottom-style": {
      "setterCode": "setStyleBorderBottomStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dotted"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dotted")",
    },
  },
}
`;

exports[`border-*-style: border-bottom-style-dotted: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-style": {
      "setterCode": "borderStyle(UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dotted"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None")))",
      "valueCode": "UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dotted"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"))",
    },
  },
}
`;

exports[`border-*-style: border-bottom-style-none: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-bottom-style": {
      "setterCode": "setStyleBorderBottomStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "None"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "None")",
    },
  },
}
`;

exports[`border-*-style: border-bottom-style-none: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-style": {
      "setterCode": "borderStyle(UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None")))",
      "valueCode": "UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"))",
    },
  },
}
`;

exports[`border-*-style: border-bottom-style-solid: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-bottom-style": {
      "setterCode": "setStyleBorderBottomStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Solid"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Solid")",
    },
  },
}
`;

exports[`border-*-style: border-bottom-style-solid: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-style": {
      "setterCode": "borderStyle(UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Solid"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None")))",
      "valueCode": "UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Solid"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"))",
    },
  },
}
`;

exports[`border-*-style: border-left-style-dashed: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-left-style": {
      "setterCode": "setStyleBorderLeftStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dashed"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dashed")",
    },
  },
}
`;

exports[`border-*-style: border-left-style-dashed: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-style": {
      "setterCode": "borderStyle(UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dashed")))",
      "valueCode": "UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dashed"))",
    },
  },
}
`;

exports[`border-*-style: border-left-style-dotted: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-left-style": {
      "setterCode": "setStyleBorderLeftStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dotted"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dotted")",
    },
  },
}
`;

exports[`border-*-style: border-left-style-dotted: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-style": {
      "setterCode": "borderStyle(UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dotted")))",
      "valueCode": "UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dotted"))",
    },
  },
}
`;

exports[`border-*-style: border-left-style-none: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-left-style": {
      "setterCode": "setStyleBorderLeftStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "None"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "None")",
    },
  },
}
`;

exports[`border-*-style: border-left-style-none: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-style": {
      "setterCode": "borderStyle(UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None")))",
      "valueCode": "UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"))",
    },
  },
}
`;

exports[`border-*-style: border-left-style-solid: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-left-style": {
      "setterCode": "setStyleBorderLeftStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Solid"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Solid")",
    },
  },
}
`;

exports[`border-*-style: border-left-style-solid: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-style": {
      "setterCode": "borderStyle(UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Solid")))",
      "valueCode": "UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Solid"))",
    },
  },
}
`;

exports[`border-*-style: border-right-style-dashed: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-right-style": {
      "setterCode": "setStyleBorderRightStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dashed"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dashed")",
    },
  },
}
`;

exports[`border-*-style: border-right-style-dashed: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-style": {
      "setterCode": "borderStyle(UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dashed"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None")))",
      "valueCode": "UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dashed"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"))",
    },
  },
}
`;

exports[`border-*-style: border-right-style-dotted: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-right-style": {
      "setterCode": "setStyleBorderRightStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dotted"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dotted")",
    },
  },
}
`;

exports[`border-*-style: border-right-style-dotted: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-style": {
      "setterCode": "borderStyle(UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dotted"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None")))",
      "valueCode": "UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dotted"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"))",
    },
  },
}
`;

exports[`border-*-style: border-right-style-none: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-right-style": {
      "setterCode": "setStyleBorderRightStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "None"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "None")",
    },
  },
}
`;

exports[`border-*-style: border-right-style-none: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-style": {
      "setterCode": "borderStyle(UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None")))",
      "valueCode": "UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"))",
    },
  },
}
`;

exports[`border-*-style: border-right-style-solid: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-right-style": {
      "setterCode": "setStyleBorderRightStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Solid"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Solid")",
    },
  },
}
`;

exports[`border-*-style: border-right-style-solid: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-style": {
      "setterCode": "borderStyle(UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Solid"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None")))",
      "valueCode": "UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Solid"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"))",
    },
  },
}
`;

exports[`border-*-style: border-top-style-dashed: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-top-style": {
      "setterCode": "setStyleBorderTopStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dashed"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dashed")",
    },
  },
}
`;

exports[`border-*-style: border-top-style-dashed: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-style": {
      "setterCode": "borderStyle(UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dashed"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None")))",
      "valueCode": "UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dashed"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"))",
    },
  },
}
`;

exports[`border-*-style: border-top-style-dotted: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-top-style": {
      "setterCode": "setStyleBorderTopStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dotted"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dotted")",
    },
  },
}
`;

exports[`border-*-style: border-top-style-dotted: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-style": {
      "setterCode": "borderStyle(UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dotted"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None")))",
      "valueCode": "UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dotted"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"))",
    },
  },
}
`;

exports[`border-*-style: border-top-style-none: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-top-style": {
      "setterCode": "setStyleBorderTopStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "None"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "None")",
    },
  },
}
`;

exports[`border-*-style: border-top-style-none: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-style": {
      "setterCode": "borderStyle(UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None")))",
      "valueCode": "UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"))",
    },
  },
}
`;

exports[`border-*-style: border-top-style-solid: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-top-style": {
      "setterCode": "setStyleBorderTopStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Solid"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Solid")",
    },
  },
}
`;

exports[`border-*-style: border-top-style-solid: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-style": {
      "setterCode": "borderStyle(UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Solid"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None")))",
      "valueCode": "UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Solid"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"))",
    },
  },
}
`;

exports[`border-*-width: border-bottom-width-0: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-bottom-width": {
      "setterCode": "setStyleBorderBottomWidth(0, UniCSSUnitType.NONE)",
      "valueCode": "new UniCSSUnitValue(0, UniCSSUnitType.NONE)",
    },
  },
}
`;

exports[`border-*-width: border-bottom-width-0: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-*-width: border-bottom-width-1px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-bottom-width": {
      "setterCode": "setStyleBorderBottomWidth(1, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(1, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`border-*-width: border-bottom-width-1px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-*-width: border-bottom-width-medium: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-bottom-width": {
      "setterCode": "setStyleBorderBottomWidth(3, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(3, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`border-*-width: border-bottom-width-medium: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-*-width: border-bottom-width-thick: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-bottom-width": {
      "setterCode": "setStyleBorderBottomWidth(5, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(5, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`border-*-width: border-bottom-width-thick: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-*-width: border-bottom-width-thin: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-bottom-width": {
      "setterCode": "setStyleBorderBottomWidth(1, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(1, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`border-*-width: border-bottom-width-thin: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-*-width: border-left-width-0: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-left-width": {
      "setterCode": "setStyleBorderLeftWidth(0, UniCSSUnitType.NONE)",
      "valueCode": "new UniCSSUnitValue(0, UniCSSUnitType.NONE)",
    },
  },
}
`;

exports[`border-*-width: border-left-width-0: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-*-width: border-left-width-1px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-left-width": {
      "setterCode": "setStyleBorderLeftWidth(1, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(1, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`border-*-width: border-left-width-1px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-*-width: border-left-width-medium: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-left-width": {
      "setterCode": "setStyleBorderLeftWidth(3, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(3, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`border-*-width: border-left-width-medium: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-*-width: border-left-width-thick: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-left-width": {
      "setterCode": "setStyleBorderLeftWidth(5, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(5, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`border-*-width: border-left-width-thick: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-*-width: border-left-width-thin: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-left-width": {
      "setterCode": "setStyleBorderLeftWidth(1, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(1, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`border-*-width: border-left-width-thin: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-*-width: border-right-width-0: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-right-width": {
      "setterCode": "setStyleBorderRightWidth(0, UniCSSUnitType.NONE)",
      "valueCode": "new UniCSSUnitValue(0, UniCSSUnitType.NONE)",
    },
  },
}
`;

exports[`border-*-width: border-right-width-0: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-*-width: border-right-width-1px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-right-width": {
      "setterCode": "setStyleBorderRightWidth(1, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(1, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`border-*-width: border-right-width-1px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-*-width: border-right-width-medium: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-right-width": {
      "setterCode": "setStyleBorderRightWidth(3, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(3, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`border-*-width: border-right-width-medium: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-*-width: border-right-width-thick: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-right-width": {
      "setterCode": "setStyleBorderRightWidth(5, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(5, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`border-*-width: border-right-width-thick: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-*-width: border-right-width-thin: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-right-width": {
      "setterCode": "setStyleBorderRightWidth(1, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(1, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`border-*-width: border-right-width-thin: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-*-width: border-top-width-0: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-top-width": {
      "setterCode": "setStyleBorderTopWidth(0, UniCSSUnitType.NONE)",
      "valueCode": "new UniCSSUnitValue(0, UniCSSUnitType.NONE)",
    },
  },
}
`;

exports[`border-*-width: border-top-width-0: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-*-width: border-top-width-1px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-top-width": {
      "setterCode": "setStyleBorderTopWidth(1, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(1, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`border-*-width: border-top-width-1px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-*-width: border-top-width-medium: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-top-width": {
      "setterCode": "setStyleBorderTopWidth(3, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(3, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`border-*-width: border-top-width-medium: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-*-width: border-top-width-thick: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-top-width": {
      "setterCode": "setStyleBorderTopWidth(5, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(5, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`border-*-width: border-top-width-thick: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-*-width: border-top-width-thin: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-top-width": {
      "setterCode": "setStyleBorderTopWidth(1, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(1, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`border-*-width: border-top-width-thin: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-color: red: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-color: red: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-color": {
      "setterCode": "borderColor(UniNativeBorderColors(0xffff0000, 0xffff0000, 0xffff0000, 0xffff0000))",
      "valueCode": "UniNativeBorderColors(0xffff0000, 0xffff0000, 0xffff0000, 0xffff0000)",
    },
  },
}
`;

exports[`border-radius: border-bottom-left-radius-10px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-radius: border-bottom-left-radius-10px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-bottom-left-radius": {
      "setterCode": "borderRadiusBottomLeft(10, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(10, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`border-radius: border-bottom-left-radius-50%: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "border-bottom-left-radius",
        "important": false,
        "prop": "borderBottomLeftRadius",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "50%",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`50%\` is not supported for \`border-bottom-left-radius\` (supported values are: \`number\`|\`pixel\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`border-radius: border-bottom-left-radius-50%: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "border-bottom-left-radius",
        "important": false,
        "prop": "borderBottomLeftRadius",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "50%",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`50%\` is not supported for \`border-bottom-left-radius\` (supported values are: \`number\`|\`pixel\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`border-radius: border-bottom-left-radius-80px 80px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "border-bottom-left-radius",
        "important": false,
        "prop": "borderBottomLeftRadius",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "80px 80px",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`80px 80px\` is not supported for \`border-bottom-left-radius\` (supported values are: \`number\`|\`pixel\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`border-radius: border-bottom-left-radius-80px 80px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "border-bottom-left-radius",
        "important": false,
        "prop": "borderBottomLeftRadius",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "80px 80px",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`80px 80px\` is not supported for \`border-bottom-left-radius\` (supported values are: \`number\`|\`pixel\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`border-radius: border-bottom-right-radius-10px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-radius: border-bottom-right-radius-10px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-bottom-right-radius": {
      "setterCode": "borderRadiusBottomRight(10, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(10, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`border-radius: border-bottom-right-radius-50%: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "border-bottom-right-radius",
        "important": false,
        "prop": "borderBottomRightRadius",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "50%",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`50%\` is not supported for \`border-bottom-right-radius\` (supported values are: \`number\`|\`pixel\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`border-radius: border-bottom-right-radius-50%: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "border-bottom-right-radius",
        "important": false,
        "prop": "borderBottomRightRadius",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "50%",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`50%\` is not supported for \`border-bottom-right-radius\` (supported values are: \`number\`|\`pixel\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`border-radius: border-bottom-right-radius-80px 80px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "border-bottom-right-radius",
        "important": false,
        "prop": "borderBottomRightRadius",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "80px 80px",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`80px 80px\` is not supported for \`border-bottom-right-radius\` (supported values are: \`number\`|\`pixel\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`border-radius: border-bottom-right-radius-80px 80px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "border-bottom-right-radius",
        "important": false,
        "prop": "borderBottomRightRadius",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "80px 80px",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`80px 80px\` is not supported for \`border-bottom-right-radius\` (supported values are: \`number\`|\`pixel\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`border-radius: border-top-left-radius-10px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-radius: border-top-left-radius-10px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-top-left-radius": {
      "setterCode": "borderRadiusTopLeft(10, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(10, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`border-radius: border-top-left-radius-50%: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "border-top-left-radius",
        "important": false,
        "prop": "borderTopLeftRadius",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "50%",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`50%\` is not supported for \`border-top-left-radius\` (supported values are: \`number\`|\`pixel\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`border-radius: border-top-left-radius-50%: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "border-top-left-radius",
        "important": false,
        "prop": "borderTopLeftRadius",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "50%",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`50%\` is not supported for \`border-top-left-radius\` (supported values are: \`number\`|\`pixel\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`border-radius: border-top-left-radius-80px 80px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "border-top-left-radius",
        "important": false,
        "prop": "borderTopLeftRadius",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "80px 80px",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`80px 80px\` is not supported for \`border-top-left-radius\` (supported values are: \`number\`|\`pixel\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`border-radius: border-top-left-radius-80px 80px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "border-top-left-radius",
        "important": false,
        "prop": "borderTopLeftRadius",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "80px 80px",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`80px 80px\` is not supported for \`border-top-left-radius\` (supported values are: \`number\`|\`pixel\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`border-radius: border-top-right-radius-10px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-radius: border-top-right-radius-10px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-top-right-radius": {
      "setterCode": "borderRadiusTopRight(10, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(10, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`border-radius: border-top-right-radius-50%: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "border-top-right-radius",
        "important": false,
        "prop": "borderTopRightRadius",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "50%",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`50%\` is not supported for \`border-top-right-radius\` (supported values are: \`number\`|\`pixel\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`border-radius: border-top-right-radius-50%: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "border-top-right-radius",
        "important": false,
        "prop": "borderTopRightRadius",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "50%",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`50%\` is not supported for \`border-top-right-radius\` (supported values are: \`number\`|\`pixel\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`border-radius: border-top-right-radius-80px 80px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "border-top-right-radius",
        "important": false,
        "prop": "borderTopRightRadius",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "80px 80px",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`80px 80px\` is not supported for \`border-top-right-radius\` (supported values are: \`number\`|\`pixel\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`border-radius: border-top-right-radius-80px 80px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "border-top-right-radius",
        "important": false,
        "prop": "borderTopRightRadius",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "80px 80px",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`80px 80px\` is not supported for \`border-top-right-radius\` (supported values are: \`number\`|\`pixel\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`border-style: dashed: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-bottom-style": {
      "setterCode": "setStyleBorderBottomStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dashed"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dashed")",
    },
    "border-left-style": {
      "setterCode": "setStyleBorderLeftStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dashed"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dashed")",
    },
    "border-right-style": {
      "setterCode": "setStyleBorderRightStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dashed"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dashed")",
    },
    "border-top-style": {
      "setterCode": "setStyleBorderTopStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dashed"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dashed")",
    },
  },
}
`;

exports[`border-style: dashed: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-style": {
      "setterCode": "borderStyle(UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dashed"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dashed"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dashed"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dashed")))",
      "valueCode": "UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dashed"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dashed"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dashed"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dashed"))",
    },
  },
}
`;

exports[`border-style: dotted: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-bottom-style": {
      "setterCode": "setStyleBorderBottomStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dotted"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dotted")",
    },
    "border-left-style": {
      "setterCode": "setStyleBorderLeftStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dotted"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dotted")",
    },
    "border-right-style": {
      "setterCode": "setStyleBorderRightStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dotted"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dotted")",
    },
    "border-top-style": {
      "setterCode": "setStyleBorderTopStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dotted"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dotted")",
    },
  },
}
`;

exports[`border-style: dotted: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-style": {
      "setterCode": "borderStyle(UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dotted"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dotted"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dotted"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dotted")))",
      "valueCode": "UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dotted"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dotted"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dotted"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dotted"))",
    },
  },
}
`;

exports[`border-style: none: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-bottom-style": {
      "setterCode": "setStyleBorderBottomStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "None"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "None")",
    },
    "border-left-style": {
      "setterCode": "setStyleBorderLeftStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "None"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "None")",
    },
    "border-right-style": {
      "setterCode": "setStyleBorderRightStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "None"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "None")",
    },
    "border-top-style": {
      "setterCode": "setStyleBorderTopStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "None"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "None")",
    },
  },
}
`;

exports[`border-style: none: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-style": {
      "setterCode": "borderStyle(UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None")))",
      "valueCode": "UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"))",
    },
  },
}
`;

exports[`border-style: solid: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-bottom-style": {
      "setterCode": "setStyleBorderBottomStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Solid"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Solid")",
    },
    "border-left-style": {
      "setterCode": "setStyleBorderLeftStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Solid"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Solid")",
    },
    "border-right-style": {
      "setterCode": "setStyleBorderRightStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Solid"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Solid")",
    },
    "border-top-style": {
      "setterCode": "setStyleBorderTopStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Solid"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Solid")",
    },
  },
}
`;

exports[`border-style: solid: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-style": {
      "setterCode": "borderStyle(UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Solid"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Solid"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Solid"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Solid")))",
      "valueCode": "UniNativeBorderStyles(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Solid"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Solid"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Solid"), UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Solid"))",
    },
  },
}
`;

exports[`border-width: border-width: 0: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-bottom-width": {
      "setterCode": "setStyleBorderBottomWidth(0, UniCSSUnitType.NONE)",
      "valueCode": "new UniCSSUnitValue(0, UniCSSUnitType.NONE)",
    },
    "border-left-width": {
      "setterCode": "setStyleBorderLeftWidth(0, UniCSSUnitType.NONE)",
      "valueCode": "new UniCSSUnitValue(0, UniCSSUnitType.NONE)",
    },
    "border-right-width": {
      "setterCode": "setStyleBorderRightWidth(0, UniCSSUnitType.NONE)",
      "valueCode": "new UniCSSUnitValue(0, UniCSSUnitType.NONE)",
    },
    "border-top-width": {
      "setterCode": "setStyleBorderTopWidth(0, UniCSSUnitType.NONE)",
      "valueCode": "new UniCSSUnitValue(0, UniCSSUnitType.NONE)",
    },
  },
}
`;

exports[`border-width: border-width: 0: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-width: border-width: 1px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-bottom-width": {
      "setterCode": "setStyleBorderBottomWidth(1, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(1, UniCSSUnitType.PX)",
    },
    "border-left-width": {
      "setterCode": "setStyleBorderLeftWidth(1, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(1, UniCSSUnitType.PX)",
    },
    "border-right-width": {
      "setterCode": "setStyleBorderRightWidth(1, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(1, UniCSSUnitType.PX)",
    },
    "border-top-width": {
      "setterCode": "setStyleBorderTopWidth(1, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(1, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`border-width: border-width: 1px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-width: border-width: 5px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-bottom-width": {
      "setterCode": "setStyleBorderBottomWidth(5, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(5, UniCSSUnitType.PX)",
    },
    "border-left-width": {
      "setterCode": "setStyleBorderLeftWidth(5, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(5, UniCSSUnitType.PX)",
    },
    "border-right-width": {
      "setterCode": "setStyleBorderRightWidth(5, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(5, UniCSSUnitType.PX)",
    },
    "border-top-width": {
      "setterCode": "setStyleBorderTopWidth(5, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(5, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`border-width: border-width: 5px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-width: border-width: medium: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-bottom-width": {
      "setterCode": "setStyleBorderBottomWidth(3, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(3, UniCSSUnitType.PX)",
    },
    "border-left-width": {
      "setterCode": "setStyleBorderLeftWidth(3, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(3, UniCSSUnitType.PX)",
    },
    "border-right-width": {
      "setterCode": "setStyleBorderRightWidth(3, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(3, UniCSSUnitType.PX)",
    },
    "border-top-width": {
      "setterCode": "setStyleBorderTopWidth(3, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(3, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`border-width: border-width: medium: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-width: border-width: thick: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-bottom-width": {
      "setterCode": "setStyleBorderBottomWidth(5, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(5, UniCSSUnitType.PX)",
    },
    "border-left-width": {
      "setterCode": "setStyleBorderLeftWidth(5, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(5, UniCSSUnitType.PX)",
    },
    "border-right-width": {
      "setterCode": "setStyleBorderRightWidth(5, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(5, UniCSSUnitType.PX)",
    },
    "border-top-width": {
      "setterCode": "setStyleBorderTopWidth(5, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(5, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`border-width: border-width: thick: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`border-width: border-width: thin: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "border-bottom-width": {
      "setterCode": "setStyleBorderBottomWidth(1, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(1, UniCSSUnitType.PX)",
    },
    "border-left-width": {
      "setterCode": "setStyleBorderLeftWidth(1, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(1, UniCSSUnitType.PX)",
    },
    "border-right-width": {
      "setterCode": "setStyleBorderRightWidth(1, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(1, UniCSSUnitType.PX)",
    },
    "border-top-width": {
      "setterCode": "setStyleBorderTopWidth(1, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(1, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`border-width: border-width: thin: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;
